AppacheIngress/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    # Apache-specific annotations (if needed)
    # Example: force SSL redirection or custom annotations for Apache
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: apache
  rules:
  - host: a47eb078e26fd453ba1a7f6a9e947d7d-1283335707.ap-northeast-3.elb.amazonaws.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontendsrv
              port:
                number: 80
        - path: /student
          pathType: Prefix
          backend:
            service:
              name: backendsrv
              port:
                number: 8080
